update get_m method and data citations

--- a/Regionalization-Notebook.ipynb
+++ b/Regionalization-Notebook.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Data Regionalization Example \n",
-    "v2025.03.23"
+    "v2025.06.02"
    ]
   },
   {
@@ -45,16 +45,24 @@
     "The data file sources:\n",
     "\n",
     "- Balancing Authority Areas\n",
-    "    - HIFLD December 2022 update ([.html](https://hifld-geoplatform.hub.arcgis.com/datasets/geoplatform::control-areas/about))\n",
+    "    - U.S. Energy Atlas ([.html](https://atlas.eia.gov/datasets/09550598922b429ca9f06b9a067257bd_255/explore))\n",
     "- U.S. Census Tracts\n",
-    "    - U.S. Census Bureau TIGER 2020 ([.zip](https://www2.census.gov/geo/tiger/GENZ2020/shp/cb_2020_us_tract_500k.zip))\n",
-    "    - Colorado, same vintage and source ([.zip](https://www2.census.gov/geo/tiger/GENZ2020/shp/cb_2020_08_tract_500k.zip))\n",
+    "    - U.S. Census Bureau TIGER Cartographic Boundary Files at 500k resolution (based on census year global parameter)\n",
+    "        - 2020 ([.zip](https://www2.census.gov/geo/tiger/GENZ2020/shp/cb_2020_us_tract_500k.zip))\n",
+    "- U.S. Counties\n",
+    "    - U.S. Census Bureau TIGER Cartographic Boundary Files at 500k resolution (based on census year global parameter)\n",
+    "        - 2020 ([.zip](https://www2.census.gov/geo/tiger/GENZ2020/shp/cb_2020_us_county_500k.zip))\n",
+    "- U.S. States\n",
+    "    - U.S. Census Bureau TIGER Cartographic Boundary Files at 500k resolution (based on census year global parameter)\n",
+    "        - 2020 ([.zip](https://www2.census.gov/geo/tiger/GENZ2020/shp/cb_2020_us_state_500k.zip))\n",
     "- Coal Basins\n",
-    "    - ([.zip](https://www.eia.gov/maps/map_data/cbm_4shps.zip))\n",
-    "- GHGRP Natural Gas Basins (not publicly available)\n",
-    "    - ([.html](https://mykeylogic.sharepoint.com/sites/KL_PRJ_LCA/Shared%20Documents/Forms/AllItems.aspx?id=%2Fsites%2FKL%5FPRJ%5FLCA%2FShared%20Documents%2FActivity%2024%20%2D%20ASMA%2Fresources%2Fshapefiles%2FBASINS%5FSHAPEFILE%2Ezip&parent=%2Fsites%2FKL%5FPRJ%5FLCA%2FShared%20Documents%2FActivity%2024%20%2D%20ASMA%2Fresources%2Fshapefiles&p=true&ga=1)) Not sure which link to include here\n",
-    "- States\n",
-    "    - ([.zip](http://www2.census.gov/geo/tiger/TIGER2012/STATE/tl_2012_us_state.zip))"
+    "    - EIA.gov ([.zip](https://www.eia.gov/maps/map_data/cbm_4shps.zip))\n",
+    "- Electricity Market Module Regions\n",
+    "    - EIA.gov ([.html](https://www.eia.gov/outlooks/aeo/additional_docs.php))\n",
+    "- NERC Subregions\n",
+    "    - EIA ([.html](https://services1.arcgis.com/Hp6G80Pky0om7QvQ/arcgis/rest/services/NERC_Regions/FeatureServer/0/)) \n",
+    "- Natural Gas Basins\n",
+    "    - EPA's Office of Air and Radiation (OAP) and Office of Atmospheric Protection (OAP) ([.zip](https://edg.epa.gov/data/Public/OAR/OAP/Basins_Shapefile.zip)) "
    ]
   },
   {
@@ -80,7 +88,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "from regionalizer import *"
+    "import regionalizer as rlyr"
    ]
   },
   {
@@ -103,7 +111,7 @@
    "source": [
     "# Set up the logger for convenience, as there are logging statements\n",
     "# throughout the code to tell us what's going on.\n",
-    "logger = get_logger()"
+    "logger = rlyr.get_logger()"
    ]
   },
   {
@@ -113,8 +121,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Check to see where you are running this code; helps debug problems\n",
-    "os.getcwd()"
+    "# Show starting and ending region options.\n",
+    "rlyr.show_start_extents()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a70b2492-a5ef-42f0-8c65-7f31b8382aff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rlyr.show_end_extents()"
    ]
   },
   {
@@ -139,13 +157,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a7ab03a0-e0b6-4281-9f4e-9681c39a2659",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Census year:\", rlyr.CENSUS_YEAR)\n",
+    "print(\"BA year:\", rlyr.BA_YEAR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "42669d3e",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "M, codes, cen_codes = get_m(starting_extent='BA', ending_extent = 'CT', weighting='A', state='US')"
+    "M, codes, cen_codes = rlyr.get_m(start_extent='BA', end_extent='CT', weighting='A', state='US')"
    ]
   },
   {
